--- a/gb/news2008_4.md
+++ b/gb/news2008_4.md
@@ -29,7 +29,7 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11742993.md#1" target="_blank">93岁老奶奶玩角色扮演Cosplay大红 粉丝百万</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11742993.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/825f5afa8260590218371708b38b9a49-150x120.jpg" align ="left"></a>角色扮演（Cosplay）向来都是年轻人在玩，没想到一位美国93岁的老奶奶和27岁的孙子联手，大玩各种有趣的角色扮演，再把它们放在网路上后，让老奶奶成为世界知名网红，各网站加起来有100万以上的粉丝群呢！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11743069.md#1" target="_blank">猫咪当红娘隔空牵红线 英男飞越4000英里会美女</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11743069.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/8438e77d5f6a97d31f45fbe611021e4c-150x120.jpg" align ="left"></a>没想到猫咪也会当红娘，它牵起4000英里外的英国和美国的一对男女的缘分，这可不是电影情节，而是真实发生在这个月初的事情，我们来看看这个可爱的爱情故事是怎么发生的？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 8:40 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11732594.md#1" target="_blank">桑椹延年益寿好处多 桑椹膏和桑椹茶的作法</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11732594.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/0edc6fc2be77aaa51858b9b2caced2be-150x120.jpg" align ="left"></a>桑椹叶泡茶饮用可延年益寿，故又称为“神仙茶”，便依样画葫芦叫先生为我采桑叶制茶，循一般制茶过程，洗净叶片曝日杀青萎凋，装入网袋中揉制成茶青，静置一晚使其发酵，隔天用干净的炒锅小火慢焙，完全干燥后虽成碎片状却茶香四溢，闻来令人神清气爽，宛若神仙。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 3:49 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/25/n11744104.md#1" target="_blank">韩国小狗在“幼儿园”排排睡 可爱极了</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/25/n11744104.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-867986808-150x120.jpg" align ="left"></a>韩国一家专为年幼宠物狗开设的“幼儿园”经常在网上分享这些小狗的生活照，其中包括它们集体睡午觉的场景。只见它们在排列整齐的床铺上乖乖睡觉，真是可爱极了。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 1:38 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/27/n11748297.md#1" target="_blank">搭机旅行 视频教你机场生存五妙招</a><br></h3>随着安检严格，以及越来越多人旅游，乘客一般会选择尽早感到机场，有时候在机场花的时间很长。在闹哄哄的机场等候，很容易产生不耐烦和焦虑情绪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 7:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/28/n11751661.md#1" target="_blank">酒后汽车不让开</a><br></h3>仅在美国，每天就有30人在与酒后驾驶相关的交通事故中丧生。这相当于每48分钟就有一个人死于酒驾相关的事故。但问题是，现实中其实已经存在简单的技术可以防止，甚至可能杜绝酒后驾驶的。那么为什么汽车制造商不在新车上配置这种技术呢？
 
 &nbsp;
