--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -9,6 +9,7 @@
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768055.md#1">川普击毙伊朗二号人物 对中共释何种信号</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767049.md#1">伊朗二号人物索莱马尼被击毙 他是什么人？</a><br>
 <br><p><a href="https://github.com/lduuv275/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
+<a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775572.md#1">【名家专栏】百年前已证明社会主义必失败</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774385.md#1">横河：从萨斯到武汉肺炎面面观</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774233.md#1">张林：北京风声鹤唳 草木皆兵</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774165.md#1">袁斌：中国历史老师特有的困境和耻辱</a><br>
@@ -21,7 +22,6 @@
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11772316.md#1">陈思敏：中共开年“抢钱” 通膨飙升民生苦</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11760382.md#1">李旭彤：挖掘五千年文明惊世宝藏（13）</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11772255.md#1">李中泠：武汉肺炎疫情恐遭隐瞒 国人如何自保？</a><br>
-<a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11772102.md#1">金言：展望2020 中国经济从暴富到暴雷</a><br>
 <br><p><a href="https://github.com/lduuv275/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/5/n11701493.md#1">【思想领袖】中共内部承认正走向解体（一）</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11739570.md#1">【2019盘点】时代变革 川普的九记重锤</a><br>
