--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -4,7 +4,7 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11772056.md#1" target="_blank">一点垃圾都不留 德国男发明“咖啡渣杯”环保满分</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11772056.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2e8eb28c2a4c683b9552a3ef37189556-150x120.jpg" align ="left"></a>当我们在喝咖啡时，很难想像一杯一次性杯子会造成多大的问题；然而数大成灾，据Insider报导，美国每年至少制造 1,200亿个一次性咖啡杯！在其制作的视频中介绍了想要解决这个问题的德国一家名叫Kaffeeform公司。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 9:03 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775338.md#1" target="_blank">牙痛起来要命！古代中医4个妙方治牙痛</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775338.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/toothache-chinese-medicine_1608129853-150x120.jpg" align ="left"></a>俗话说“牙痛不是病，痛起来要命”，有过亲身经历的人想必深有感触。中医自古就流传下来许多妙方，可以有效治牙痛。从“治本”的角度来说，顾好脾胃及肾是防治牙病的根本方法。“急着治其标，缓者治其本”，牙痛发作时直接使用外治法来治疗牙痛，是快速有效的方法。中医自古就流传下来许多有效治疗牙痛的药方，介绍四个有效治疗方药。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 7:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775565.md#1" target="_blank">现地坑 加国昔日百万豪宅如今只值2元</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11775565.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/sinked-house-1-150x120.jpg" align ="left"></a>买海景房的人注意了！卑诗省昔日一幢价值百万的海景房，因当地频出现地坑，如今只值2块钱，令业主欲哭无泪。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 6:50 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11741553.md#1" target="_blank">孩子咳不停是大事吗？正确应对儿童慢性咳嗽</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11741553.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_439397950-150x120.jpg" align ="left"></a>感冒的季节又到了。最近许多儿童长时间咳嗽，久久不能治愈，让许多父母担心。咳嗽多久才是慢性咳嗽？爸妈如何正确应对？感冒的季节又到了。最近许多儿童长时间咳嗽，久久不能治愈，让许多父母担心。咳嗽多久才是慢性咳嗽？爸妈如何正确应对？要治疗和处理慢性咳嗽，必须让医生先排除以上慢性咳嗽的起因，然后再对症下药治疗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 2:11 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11741553.md#1" target="_blank">孩子咳不停是大事吗？医师教你应对儿童慢性咳嗽</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11741553.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/shutterstock_439397950-150x120.jpg" align ="left"></a>感冒的季节又到了。最近许多儿童长时间咳嗽，久久不能治愈，让许多父母担心。咳嗽多久才是慢性咳嗽？爸妈如何正确应对？感冒的季节又到了。最近许多儿童长时间咳嗽，久久不能治愈，让许多父母担心。咳嗽多久才是慢性咳嗽？爸妈如何正确应对？要治疗和处理慢性咳嗽，必须让医生先排除以上慢性咳嗽的起因，然后再对症下药治疗。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 2:11 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11772107.md#1" target="_blank">4岁男孩会双语 用手语帮聋哑爸妈解说剧情</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11772107.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/3fb29a4cfed4e50f157be4052fe2dd3c-150x120.jpg" align ="left"></a>才4岁的儿子为帮助聋哑的父母，做了一件很暖心的事情。视频中，小男孩坐在电视机的旁边，看着画面翻译其中的意思，用手语比划给爸妈看。发布以来，该视频已被观看了数万次。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767739.md#1" target="_blank">韩国棉花糖女孩 分享蜕变成正妹过程和秘诀</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11767739.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/53c48d431a5e9da76d1debae457e626f-150x120.jpg" align ="left"></a>大家都知道减重是一件多么艰难的事；一位在南韩 经营服饰的网路正妹，在她的IG上分享了自己读高中时的照片，两相比照之下落差相当大，让网友为之哗然，没想到苗条秀丽的她，以前竟然是肉肉、圆圆的棉花糖胖妹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 10:53 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11765400.md#1" target="_blank">长发公主真人版 180公分长发正妹揭护发秘诀</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11765400.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/dcc809c6366fbf4520098ea46964f413-150x120.jpg" align ="left"></a>被称为现代真人版的“长发公主”，住在乌克兰34岁的阿琳娜?克拉夫琴科（Alena Kravchenko），因为拥有一头长达6英尺（1.8米）的美丽金发，而成为一名热门网红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 10:43 PM			</td></tr>
